[project]
name = "pv2"
version = "0.12.1"
description = "PV2 backend framework module"
readme = "README.md"
authors = [
  { name = "Louis Abel", email = "label@rockylinux.org" }
]

maintainers = [
  { name = "Louis Abel", email = "label@rockylinux.org" }
]

requires-python = ">=3.9"

dependencies = [
  "GitPython >= 3.1.30",
  "lxml >= 4.6.5",
  "file-magic >= 0.4.0",
  "pycurl >= 7.43.0.6",
  "boto3 >= 1.22.10"
]

[project.urls]
"Homepage" = "https://github.com/peridotbuild/pv2"
"Bug Tracker" = "https://github.com/peridotbuild/pv2/issues"

[project.license]
file = "LICENSE"

[tool.setuptools]
package-dir = { "pv2" = "pv2" }

[tool.poetry.scripts]
import_pkg = "pv2.scripts.import_pkg:run"
#pkg_info = "pv2.scripts.pkg_info:run"
#build_pkg = "pv2.scripts.build_pkg:run"
