[project]
name = "pv2"
version = "0.14.0"
description = "PV2 backend framework module"
readme = "README.md"
authors = [
  { name = "Louis Abel", email = "label@resf.org" }
]

maintainers = [
  { name = "Louis Abel", email = "label@resf.org" }
]

requires-python = ">=3.9"

dependencies = [
  "GitPython >= 3.1.30",
  "lxml >= 4.6.5",
  "file-magic >= 0.4.0",
  "pycurl >= 7.43.0.6",
  "boto3 >= 1.22.10",
  "pulpcore-client >= 3.58.0"
]

[project.urls]
"Homepage" = "https://github.com/peridotbuild/pv2"
"Bug Tracker" = "https://github.com/peridotbuild/pv2/issues"

[project.license]
file = "LICENSE"

[tool.setuptools]
package-dir = { "pv2" = "pv2" }

[project.scripts]
import_pkg = "pv2.scripts.import_pkg:run"
import_module = "pv2.scripts.import_module:run"
import_java = "pv2.scripts.import_java:run"
#pkg_info = "pv2.scripts.pkg_info:run"
#build_pkg = "pv2.scripts.build_pkg:run"
