[project]
name = "pv2"
version = "0.15.3"
description = "PV2 backend framework module"
readme = "README.md"
authors = [
  { name = "Louis Abel", email = "label@resf.org" }
]

maintainers = [
  { name = "Louis Abel", email = "label@resf.org" }
]

requires-python = ">=3.9"

dependencies = [
  "GitPython >= 3.1.30",
  "lxml >= 4.6.5",
  "file-magic >= 0.4.0",
  "pycurl >= 7.43.0.6",
  "botocore >= 1.31.62",
  "boto3 >= 1.22.10",
  "rpmautospec >= 0.7.0",
]

license-files = [
  "LICENSE",
]

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://git.resf.org/peridot/pv2"
"Bug Tracker" = "https://git.resf.org/peridot/pv2/issues"

[tool.setuptools]
package-dir = { "pv2" = "pv2" }

[project.scripts]
import_pkg = "pv2.scripts.import_pkg:run"
import_module = "pv2.scripts.import_module:run"
import_java = "pv2.scripts.import_java:run"
srpmproc = "pv2.scripts.srpmproc:run"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.flake8]
max-line-length = 110
